--- a/static/style.css
+++ b/static/style.css
@@ -80,6 +80,8 @@ form{
 }
 
 .form-group-home{
+  margin-left: 2px;
+  padding: 0;
   background-color: #000;
   font-size: 20px;
   align-items: center;
