--- a/templates/results.html
+++ b/templates/results.html
@@ -18,7 +18,7 @@ Search results
       <li>
         <div class="form-group-home">
           <form method="post" action={{url_for('results')}}>
-            <input type="text" name="search" placeholder="Enter title, author, isbn">
+            <input type="text" name="search" placeholder="Enter title, author, isbn" autocomplete="off">
             <button class="btn btn-md">Search</button>
           </form>
         </div>
