--- a/templates/results.html
+++ b/templates/results.html
@@ -23,6 +23,7 @@ Search results
           </form>
         </div>
       </li>
+    <center>{{res}}</center>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li><a href"#">"<span class="glyphicon glyphicon-user"></span>{{user}}</a></li>
@@ -32,7 +33,7 @@ Search results
 </nav>
 <div class="list">
   {% for result in results %}
-    <li><a href="#">{{result.isbn}} {{result.title}} by {{result.author}} </a></li>
+    <li><a href="/isbn/{{result.isbn}}" value="{{result.isbn}}">{{result.isbn}} {{result.title}} by {{result.author}} </a></li>
   {% endfor %}
 </div>
 
