--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@ Start Reading
 {% endblock %}
 
 {% block body %}
-<div class="message">*{{message}}*</div>
+<div class="alert alert-danger" role="alert">{{message}}</div>
 <div class="form-group">
   <form action="{{url_for('index')}}" method="post" class="register">
     <b><legend>Register Here </legend></b>
